# biobrain

./: .gitignore  APPROACH.md  LICENSE  README.md  pyproject.toml
bench/: play_one_game.py  probe_cd82_selector_observability.py  probe_four_capabilities.py  probe_l3_coverage.py  probe_ledger_brain.py  probe_ledger_transfer_vc33.py  probe_lookahead_planner.py  probe_roles_cd82.py  probe_v2_smoke.py  probe_within_game_search_e2e.py  probe_world_model_accuracy.py
biobrain/: __init__.py  brain.py  brain_v2.py  protocols.py  types.py
biobrain/_fixtures/: fixtures.py
biobrain/adapters/: __init__.py
biobrain/critic/: __init__.py  base.py  change_dynamics.py  change_dynamics_facts.py  compression.py  critic_facade.py  l3.py  noise.py  pattern_recurrence.py  symmetry.py
biobrain/curiosity/: __init__.py  curiosity_facade.py  predicates.py  residual.py  world_model.py
biobrain/env/: __init__.py  arena_env.py  brain_interface.py
biobrain/latent_inference/: __init__.py  inference.py  schemas.py
biobrain/ledger/: __init__.py  ledger.py
biobrain/motor_cortex/: __init__.py  brain.py  core.py  facade.py  goal_dream_brain.py
biobrain/perception/: __init__.py  encoder.py  perceive.py  salience.py
biobrain/planner/: __init__.py  agency.py  commit_monitor.py  goal_brain.py  lookahead.py  (+6 more)
docs/: COMPONENTS.md  DESIGN.md  PERF_BUDGETS.md  PRINCIPLES.md  ROADMAP.md
tests/: test_biobrain_scaffold.py  test_env_adapter.py  test_fingerprint.py  test_predicates.py  test_roles.py  test_search_graph.py  test_subgoals.py  test_v2_components.py  test_within_game_search_e2e.py
(+13 files in other folders)
